
# heading references
# Added     : for new features.
# Changed   : for changes in existing functionality.
# Deprecated: for soon-to-be removed features.
# Removed   : for now removed features.
# Fixed     : for any bug fixes.
# Security  : in case of vulnerabilities.

See: https://keepachangelog.com

Not using any form of semantic versioning, just bumping the number.

** placeholder

** 0.3 <2024-10-25>🎃
*** Changed
- Changed the parameter conventions for clarity
    - ~c~ -> ~color~
    - ~transform~ -> ~edit-fn~
- ~ct-tint-contrast~ renamed to ~ct-contrast-min~
- Move ~ct-make-*~ functions into the generation macro
- Docs: spell out color propery names in various places
- Improve readme generation

*** Added
- added okLAB support - built on top of color.el, so only enabled if your emacs has [[https://git.savannah.gnu.org/cgit/emacs.git/commit/lisp/color.el?id=c5e5940ba40b801270bbe02b92576eac36f73222][this commit]]
- ~ct-point-*~ functions for editing the color at point interactively
- ~ct-aiterate~ an anaphoric macro for ct-iterate
- ~ct-aiterations~ an anaphoric macro for ct-iterations
- ~ct-contrast-max~ function to ensure a maximum contrast ratio
- ~ct-contrast-clamp~ function to clamp to a specified contrast ratio
- ~ct-verbose-p~ variable for enabling logs (currently just to the ~*Messages*~ buffer)

** 0.2 <2022-06-09>
*** Added
- Colorspace property inc, dec functions for editing a function by a minimum amount needed to affect change
    - Example: ~ct-edit-lab-l-inc~
    - Note: this allows for *much* greater precision in iteration contexts
- Generated documentation and examples in the readme, inspired by the dash.el style
- ~ct-complement~, a function for returning a complement function
- ~ct-average~, a function for mixing colors in a selected colorspace

*** Changed
- Most colorspace functions are now generated with a big macro
- Change ~ct-transform~ prefix -> ~ct-edit~
- ~ct-tint-ratio~ is now more precise, thanks fo the ~l-inc~ functions